# Deamon_test

./: .pre-commit-config.yaml  Dockerfile  README.md  ci-import-probe-second.txt  ci-import-probe.txt  pyproject.toml
.github/workflows/: main.yml
Course1/content/Module-1/task10/: task10.md
Course1/content/Module-1/task2/: task2.md
Course1/content/Module-1/task5/: task5.md
Course1/content/Module-1/task7/: task7.md
Course1/content/Module-1/task8/: task8.md
Course1/content/Module-2/: theory.md
Course1/content/Module-2/task11/: task11.md
Course1/content/Module-2/task12/: task12.md
Course1/content/Module-2/task13/: task13.md
Course1/content/Module-2/task16/: task16.md
Course1/content/Module-2/task18/: task18.md
Course1/content/Module-2/task19/: task19.md
Course1/content/Module-2/task20/: task20.md
Course1/content/Module-3/task21/: task21.md
Example/: course.json
Example/content/Lecture-10/: 1.md  2.md
Example/content/Lecture-11/: 1.md
Example/content/Lecture-12/: 1.md  2.md
Example/content/Lecture-13/: 1.md  2.md
Example/content/Lecture-2/: task2.md  task3.md
Example/content/Lecture-3/: task5.md
Example/content/Lecture-9/: 1.md  2.md
Example/content/Module-1/: theory.md
Example/content/Module-3/: theory.md
Example/content/Taskset-6/: task10.md  task11.md  task12.md  task9.md
Example1/content/Lecture-3/: task4.md  topic5.md
Example1/content/Lecture-4/: task6.md  task7.md  topic6.md
src/: __init__.py  client.py  course_validator.py  exceptions.py  models.py  parser.py  runner.py  tests_run.py  validate.py
(+271 files in other folders)
